--- a/LuanVanTotNghiep/Views/Admin/Index.cshtml
+++ b/LuanVanTotNghiep/Views/Admin/Index.cshtml
@@ -276,8 +276,6 @@
         <!-- Content Wrapper. Contains page content -->
         <div class="content-wrapper">
             <div ui-view></div>
-
-            <div>Quản lý nhà hàng ASP.NET MVC WITH ANGULARJS AND WEB API</div>
         </div><!-- /.content-wrapper -->
         <footer class="main-footer">
             <div class="pull-right hidden-xs">
@@ -479,7 +477,7 @@
     <script src="~/app/phieuNhapController.js"></script>
     <script src="~/app/khachHangController.js"></script>
     <script src="~/app/loaiKhachHangController.js"></script>
-
+    <script src="~/app/monAnController.js"></script>
 
 
 </body>
