--- a/LuanVanTotNghiep/Views/Shared/_Layout.cshtml
+++ b/LuanVanTotNghiep/Views/Shared/_Layout.cshtml
@@ -1,42 +1,34 @@
-﻿<!DOCTYPE html>
-<html>
+﻿
+@{
+    Layout = null;
+}
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
-</head>
-<body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
-    </div>
+    <title>@ViewBag.Title</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
-</body>
-</html>
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700|Raleway" rel="stylesheet">
+    <link href="~/Assets/client/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="~/Assets/client/css/open-iconic-bootstrap.min.css" rel="stylesheet" />
+    <link href="~/Assets/client/css/animate.css" rel="stylesheet" />
+
+
+
+    <link rel="stylesheet" href="~/Assets/client/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="~/Assets/client/css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="~/Assets/client/css/magnific-popup.css">
+    <link rel="stylesheet" href="~/Assets/client/css/bootstrap-datepicker.css">
+    <link rel="stylesheet" href="~/Assets/client/css/jquery.timepicker.css">
+
+    <link rel="stylesheet" href="~/Assets/client/css/icomoon.css">
+    <link rel="stylesheet" href="~/Assets/client/css/style.css">
+</head>
+<body data-spy="scroll" data-target="#site-navbar" data-offset="1000">
+    <!-- END nav -->
+    <!-- END section -->
+    @RenderBody()
+
+
+    @RenderPage("_Footer.cshtml")
