--- a/LuanVanTotNghiep/Views/Home/About.cshtml
+++ b/LuanVanTotNghiep/Views/Home/About.cshtml
@@ -1,7 +1,69 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "Giới thiệu";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<nav class="navbar navbar-expand-lg navbar-dark site_navbar bg-dark site-navbar-light" id="site-navbar">
+    <div class="container">
+        <a class="navbar-brand" href="/Home/Index">Thành Công </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#site-nav" aria-controls="site-nav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="oi oi-menu"></span> Menu
+        </button>
+        <div class="collapse navbar-collapse" id="site-nav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item "><a href="/Home/Index" class="nav-link">Trang chủ</a></li>
+                <li class="nav-item active"><a href="/Home/gioithieu" class="nav-link">Giới thiệu</a></li>
+                <li class="nav-item"><a href="#section-offer" class="nav-link">Đặt bàn</a></li>
+                <li class="nav-item"><a href="#section-menu" class="nav-link">Thực đơn</a></li>
+                <li class="nav-item"><a href="#section-news" class="nav-link">News</a></li>
+                <li class="nav-item"><a href="#section-login" class="nav-link">Đăng Nhập</a></li>
+                <li class="nav-item"><a href="#section-signin" class="nav-link">Đăng Ký</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+<section class="site-cover" style="background-image: url('../../Assets/client/images/bg_3.jpg');" id="section-home">
+    <div class="container">
+        <div class="row align-items-center justify-content-center text-center site-vh-100">
+            <div class="col-md-12">
+                <h1 class="site-heading site-animate mb-3">Chào bạn đến với Thành Công</h1>
+                <h2 class="h5 site-subheading mb-5 site-animate">Come and eat well with our delicious &amp; healthy foods.</h2>
+                <p><a href="https://colorlib.com/" target="_blank" class="btn btn-outline-white btn-lg site-animate" data-toggle="modal" data-target="#reservationModal">Reservation</a></p>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="site-section" id="section-about">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-5 site-animate mb-5">
+                <h4 class="site-sub-title">Giới thiệu</h4>
+                <h2 class="site-primary-title display-4">Nhà hàng Thanh Cong</h2>
+                <p>Ở con phố Phan Bội Châu - Hà Nội, có một ngã ba rất nổi tiếng với nhiều người. Đó là đoạn phố Nam Ngư cắt Phan Bội Châu. Ngã ba này nổi tiếng bởi những địa chỉ ẩm thực một thời như phở Kiệm, phở gà Nam Ngư và bây giờ là Quán Ăn Ngon ở 18 Phan Bội Châu.</p>
+                <p>
+                    Hệ thống Quán Ăn Ngon tại Hà Nội:
+                    18 Phan Bội Châu, Hoàn Kiếm, Hà Nội
+                    25T2 Trung Hòa Nhân Chính, Cầu Giấy, Hà Nội
+                    B2-R6 Vincom Royal City, 72A Nguyễn Trãi, Thanh Xuân, Hà Nội
+                </p>
 
-<p>Use this area to provide additional information.</p>
+                <p><a href="#" class="btn btn-secondary btn-lg">Learn More About Us</a></p>
+            </div>
+            <div class="col-md-1"></div>
+            <div class="col-md-6 site-animate img" data-animate-effect="fadeInRight">
+                <img src="~/Assets/client/images/about_img_1.jpg" alt="Free Template by colorlib.com" class="img-fluid">
+            </div>
+            <div class="col-md-12 site-animate mb-12">
+                <p>Ở con phố Phan Bội Châu - Hà Nội, có một ngã ba rất nổi tiếng với nhiều người. Đó là đoạn phố Nam Ngư cắt Phan Bội Châu. Ngã ba này nổi tiếng bởi những địa chỉ ẩm thực một thời như phở Kiệm, phở gà Nam Ngư và bây giờ là Quán Ăn Ngon ở 18 Phan Bội Châu.</p>
+                <p>
+                    Hệ thống Quán Ăn Ngon tại Hà Nội:
+                    18 Phan Bội Châu, Hoàn Kiếm, Hà Nội
+                    25T2 Trung Hòa Nhân Chính, Cầu Giấy, Hà Nội
+                    B2-R6 Vincom Royal City, 72A Nguyễn Trãi, Thanh Xuân, Hà Nội
+                </p>
+
+                <p><a href="#" class="btn btn-secondary btn-lg">Learn More About Us</a></p>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- END section -->
