--- a/LuanVanTotNghiep/Views/Home/Index.cshtml
+++ b/LuanVanTotNghiep/Views/Home/Index.cshtml
@@ -1,31 +1,77 @@
-﻿@{
-    ViewBag.Title = "Home Page";
+﻿@model List<LuanVanTotNghiep.Models.MONAN>
+@{
+    ViewBag.Title = "Trang chủ";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+    
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+<nav class="navbar navbar-expand-lg navbar-dark site_navbar bg-dark site-navbar-light" id="site-navbar">
+    <div class="container">
+        <a class="navbar-brand" href="/Home/Index">Thành Công </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#site-nav" aria-controls="site-nav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="oi oi-menu"></span> Menu
+        </button>
+        <div class="collapse navbar-collapse" id="site-nav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active"><a href="/Home/Index" class="nav-link">Trang chủ</a></li>
+                <li class="nav-item"><a href="/Home/About" class="nav-link">Giới thiệu</a></li>
+                <li class="nav-item"><a href="#section-offer" class="nav-link">Đặt bàn</a></li>
+                <li class="nav-item"><a href="#section-menu" class="nav-link">Thực đơn</a></li>
+                <li class="nav-item"><a href="#section-news" class="nav-link">News</a></li>
+                <li class="nav-item"><a href="#section-login" class="nav-link">Đăng Nhập</a></li>
+                <li class="nav-item"><a href="#section-signin" class="nav-link">Đăng Ký</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+<section class="site-cover" style="background-image: url('../../Assets/client/images/bg_3.jpg');" id="section-home">
+    <div class="container">
+        <div class="row align-items-center justify-content-center text-center site-vh-100">
+            <div class="col-md-12">
+                <h1 class="site-heading site-animate mb-3">Chào bạn đến với Thành Công</h1>
+                <h2 class="h5 site-subheading mb-5 site-animate">Come and eat well with our delicious &amp; healthy foods.</h2>
+                <p><a href="https://colorlib.com/" target="_blank" class="btn btn-outline-white btn-lg site-animate" data-toggle="modal" data-target="#reservationModal">Reservation</a></p>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="site-section" id="section-menu">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-center mb-5 site-animate">
+                <h2 class="display-4">Thực đơn</h2>
+                <div class="row justify-content-center">
+                    <div class="col-md-7">
+                        <p class="lead"></p>
+                    </div>
+                </div>
+            </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+            <div class="col-md-12 text-center">
+
+                @{ Html.RenderAction("_loaimonan", "sanpham");}
+
+                <div class="tab-content text-left">
+                    <div class="col-md-12 site-animate">
+                        <div class="row">
+                            @foreach (var item in Model)
+                            {
+                                var link = "/sanpham/chitiet/" + item.MAMON;
+                                <div class="col-md-6 site-animate">
+                                    <div class="media menu-item">
+                                        <a href="@link"><img class="mr-3" src="@item.HINHANH.DUONGDAN1" class="img-fluid" alt="Free Template by colorlib.com"></a>
+                                        <div class="media-body">
+                                            <h5 class="mt-0">@item.TENGOI</h5>
+                                            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                                            <h6 class="text-primary menu-price">@item.DONGIA VND</h6>
+                                        </div>
+                                    </div>
+                                </div>
+                            }
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+</section>
