--- a/LuanVanTotNghiep/app/View/homeView.html
+++ b/LuanVanTotNghiep/app/View/homeView.html
@@ -4,25 +4,20 @@
         Home page
         <small></small>
     </h1>
-    <ol class="breadcrumb">
-        <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-        <li><a href="#">Examples</a></li>
-        <li class="active">Blank page</li>
-    </ol> 
 </section>
 <!-- Main content -->
 <section class="content">
     <!-- Default box -->
     <div class="box">
         <div class="box-header with-border">
-            <h3 class="box-title">{{ message }}</h3>
+            <h3 class="box-title">Trang quản trị xây dựng website nhà hàng MVC ASP.NET WITH WEB API AND ANGULARJS</h3>
             <div class="box-tools pull-right">
                 <button class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse"><i class="fa fa-minus"></i></button>
                 <button class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove"><i class="fa fa-times"></i></button>
             </div>
         </div>
         <div class="box-body">
-            Start creating your amazing application!
+            {{ message }}
         </div><!-- /.box-body -->
         <div class="box-footer">
             Footer
